Added rotation to Rocketseat logo

--- a/style.css
+++ b/style.css
@@ -51,6 +51,19 @@ main {
   clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
+.rotate {
+  animation: rotation 12s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(359deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
 h1 {
   font-size: 1.5rem;
   margin-top: 1.5rem;
